fixed margin-top layout issue

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
     margin: auto;
 }
 
-.main {
+.main-container {
     margin-top: 120px;
 }
 
@@ -15,7 +15,7 @@
     .container-fluid{ 
         max-width: 100%;
     }
-    .main {
+    .main-container {
         margin-top: 135px;
     }
 }
