--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -2,6 +2,7 @@
     max-width: 800px ;
 }
 
+
 .card {
     transition: 0.3s;
 }
@@ -14,8 +15,18 @@
 .item {
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.2));
 }
-@media (max-width: 990px) {
 
+.main-div {
+    overflow-x: hidden;
+    margin-top: 120px;
+}
+
+
+@media (max-width: 990px) {
+    .main-div {
+        margin-top: 135px;
+    }
+    
     .feature { 
         width: 90% !important;
     }
